<resources>
    <string name="app_name">نماء محلي</string>
    <string name="friendName">أدخل اسم صديقك</string>
    <string name="btnMake">اصنع</string>
    <string name="btnGrow">ازرع</string>
    <string name="btnEat">كل</string>
    <string name="btnShop">أشتري</string>
    <string name="btnCook">أطبخ</string>
    <string name="Key_type">Key type</string>
    <string name="friend_Name">friend Name</string>
    <string name="Title">العنوان</string>
    <string name="Paragraph">الشرح</string>
    <string name="btnShare">شاركه مع </string>
    <string name="make_description">صناعة منتجك محليا يسهم في زيادة الفرص الوظيفية في ورش العمل و المصانع المحلية. عند إنفاقك المال لورشة أو مصنع محلي فإن ذلك يؤدي إلى تقوية الإقتصاد المحلي للمجتمع ويزيد من تطور قطاعات محلية أخرى. فوائد الصناعة المحلية أنه يمكنك طلب كميات أقل بأسرع وقت ممكن و اكتشاف أخطاء المنتج بأسرع وقت و إصلاحها فورا بسبب عدم وجود مرحلة النقل و جمارك الحدود. عند العمل مع حرفي أو مصنع محلي فإن التواصل يكون أسهل مما يؤدي إلى زيادة كفائة العمل و الإنتاج.</string>
    <string name="cook_description">يمكن للطبخ أن يكون بداية لحياتك الصحية، باستكشاف وصفات صحية و التعلم عن الغذاء. الطبخ لنفسك و لأسرتك يساعدك لمعرفة ما إذا كان هناك حساسية من بعض الأطعمة. من الأمور التي تسهل عليك عملية الطبخ لنفسك هي علاقة الطبخ بتراثك و مشاركة الآخرين، يمكنك أن تختار يوم في الأسبوع يتم الطبخ فيه في المنزل بمشاركة الأسرة أو الأصدقاء سيساعد ذلك في تقوية العلاقة و يسهل عليك عملية الطبخ لوحدك.</string>
    <string name="eat_description">شراء الغذاء محليا يعزز من المزارع المحلية و يساعد في زيادة فرص عمل جديدة في مجال معالجة الغذاء و في نقل و توزيع الغذاء و المال الذي يتم إنفاقه محليا يكون بمثابة استثمار في الاقتصاد المحلي.
‎شراء الغذاء محليا يساعد على تقليل مسافة نقل الغذاء مما يؤدي إلى تقليل استخدام الوقود على المستوى العالمي. و بسبب قصر المسافه فإن الغذاء المحلي أغنى بالعناصر الغذائية و طعمه أحلى.</string>
    <string name="grow_description">عند زراعة الغذاء محليا فإنك تساهم في الحفاظ على الأراضي الزراعية و المساحات المفتوحة في مجتمعك. الزراعة المحلية تساعد في تقليل استهلاك الوقود عالميا، بسبب قرب المسافة التي تستغرق لنقل الغذاء، مما يؤدي إلى الحفاظ على البيئة.</string>
    <string name="shop_description">شراء منتجات محلية يسهم في تقوية الإقتصاد المحلي للمجتمع، يقلل من استخدام الوقود عالميا بسبب قصر مسافة نقل المنتجات، و يزيد من اصرار صاحب المشروع على الإنتاج محليا. عند التعامل مع شركة ناشئة محلية فإن صاحب المشروع يكون أقرب إلى الزبائن مما يؤدي إلى خدمة أفضل لك.</string>

</resources>